# how-cli

./: LICENSE  README.md  how.py  infer.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build_and_publish.yml
core/: __init__.py  chains.py  config.py  llm.py  parser.py  prompts.py  providers.py  schema.py  template.py
how/: __init__.py  __main__.py  formatting.py  how.py  infer.py
how/core/: __init__.py  chains.py  config.py  llm.py  parser.py  providers.py  template.py
