[tool.poetry]
name = "how"
version = "0.1.0"
description = "An AI-based CLI assistant to help you with command line & shell."
authors = ["FireHead90544 <rudranshjoshi1806@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.12.3"
langchain = "^0.2.11"
langchain-google-genai = "^1.0.8"

[tool.poetry.scripts]
how = "how:app"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
